src/test/ui/parser/char/whitespace-character-literal.stderr
error: character literal may only contain one codepoint
  --> $DIR/whitespace-character-literal.rs:6:30
   |
LL |     let _hair_space_around = ' x​';
   |                              ^^^^
   |
note: there are non-printing characters, the full sequence is `\u{200a}x\u{200b}`
  --> $DIR/whitespace-character-literal.rs:6:31
   |
LL |     let _hair_space_around = ' x​';
   |                               ^^
help: if you meant to write a `str` literal, use double quotes
   |
LL |     let _hair_space_around = " x​";
   |                              ~~~~

error: aborting due to previous error

